--- a/Auth/Authenticator/appsettings.Development.json
+++ b/Auth/Authenticator/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Token": "mega ultra secret key"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
