--- a/Auth/Authenticator/appsettings.Development.json
+++ b/Auth/Authenticator/appsettings.Development.json
@@ -19,5 +19,8 @@
         "ValidIssuer": "dotnet-user-jwts"
       }
     }
+  },
+  "ConnectionStrings": {
+    "Main": "Data Source=DJORDJE;Initial Catalog=DoctorHub - users;Integrated Security=True;Encrypt=false"
   }
 }
