--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -20,9 +20,15 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
-    - name: Restore dependencies
-      run: dotnet restore
-    - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+    - name: Restore dependencies for Authenticator
+      run: dotnet restore ./Auth/Authenticator/Authenticator.sln
+    - name: Restore dependencies for Main
+      run: dotnet resotre ./Main-service/Main/Main.sln
+    - name: Build Authenticator
+      run: dotnet build ./Auth/Authenticator/Authenticator.sln --no-restore
+    - name: Build Main
+      run: dotnet build ./Main-service/Main/Main.sln --no-restore
+    - name: Test Authenticator
+      run: dotnet test ./Auth/Authenticator/Authenticator.sln --no-build --verbosity normal
+    - name: Test Main
+      run: dotnet test ./Main-service/Main/Main.sln --no-build --verbosity normal
