--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,12 +23,12 @@ jobs:
     - name: Restore dependencies for Authenticator
       run: dotnet restore ./Auth/Authenticator/Authenticator.sln
     - name: Restore dependencies for Main
-      run: dotnet resotre ./Main-service/Main/Main.sln
+      run: dotnet resotre "./Main-service/Main/Main.sln"
     - name: Build Authenticator
       run: dotnet build ./Auth/Authenticator/Authenticator.sln --no-restore
     - name: Build Main
-      run: dotnet build ./Main-service/Main/Main.sln --no-restore
+      run: dotnet build "./Main-service/Main/Main.sln" --no-restore
     - name: Test Authenticator
       run: dotnet test ./Auth/Authenticator/Authenticator.sln --no-build --verbosity normal
     - name: Test Main
-      run: dotnet test ./Main-service/Main/Main.sln --no-build --verbosity normal
+      run: dotnet test "./Main-service/Main/Main.sln" --no-build --verbosity normal
