--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,13 +22,13 @@ jobs:
         dotnet-version: 8.0.x
     - name: Restore dependencies for Authenticator
       run: dotnet restore ./Auth/Authenticator/Authenticator.sln
-    - name: Restore dependencies for Main
-      run: dotnet resotre "./Main-service/Main/Main.sln"
     - name: Build Authenticator
       run: dotnet build ./Auth/Authenticator/Authenticator.sln --no-restore
-    - name: Build Main
-      run: dotnet build "./Main-service/Main/Main.sln" --no-restore
     - name: Test Authenticator
       run: dotnet test ./Auth/Authenticator/Authenticator.sln --no-build --verbosity normal
+    - name: Restore dependencies for Main
+      run: dotnet resotre "./Main-service/Main/Main.sln" --verbosity diag
+    - name: Build Main
+      run: dotnet build "./Main-service/Main/Main.sln" --no-restore
     - name: Test Main
       run: dotnet test "./Main-service/Main/Main.sln" --no-build --verbosity normal
