--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Test Authenticator
       run: dotnet test ./Auth/Authenticator/Authenticator.sln --no-build --verbosity normal
     - name: Restore dependencies for Main
-      run: dotnet resotre ./Main-service/Main/Main.sln --verbosity diag
+      run: dotnet restore ./Main-service/Main/Main.sln --verbosity diag
     - name: Build Main
       run: dotnet build ./Main-service/Main/Main.sln --no-restore
     - name: Test Main
