Add function to list prescriptions by userId

--- a/Main-service/Main/appsettings.Development.json
+++ b/Main-service/Main/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Main": "Data Source=DJORDJE;Initial Catalog=DoctorHub - prescriptions;Integrated Security=True;Encrypt=false"
   }
 }
