--- a/Main-service/Main/appsettings.Development.json
+++ b/Main-service/Main/appsettings.Development.json
@@ -3,6 +3,9 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ConnectionStrings": {
+      "Main": "Data Source=DJORDJE;Initial Catalog=Doctor-main;Integrated Security=True;Encrypt=false"
     }
   }
 }
